--- a/scss/components/_charts.scss
+++ b/scss/components/_charts.scss
@@ -2,10 +2,10 @@
   grid-column-start: 1;
   grid-column-end: 3;
   max-width: 1100px;
-  width: 80%;
+  width: 100%;
   margin: 20px auto;
   @include mq("sm") {
-    width: 90%;
+    width: 1000%;
   }
   @include mq("med") {
     padding: 10px 50px;
